--- a/struct/scss/struct/layouts.scss
+++ b/struct/scss/struct/layouts.scss
@@ -155,6 +155,57 @@
   min-inline-size: 50%;
 }
 
+// Variant for when .with-sidebar is used within a .cover layout
+// and needs to fill the available vertical space
+.with-sidebar--fill-height {
+  flex: 1;
+}
+
+// Navigation sidebar component styling
+.sidebar--nav {
+  width: 16em;
+  background: #f8f8f8;
+  background: linear-gradient(
+    180deg,
+    rgba(248,248,248,1) 0%,
+    rgba(248,248,248,1) 94%,
+    rgba(255,255,255,1) 100%);
+  border-top-left-radius: 1em; 
+  border-bottom-left-radius: 1em;
+}
+
+.sidebar-menu {
+  list-style: none;
+  margin: 0;
+  padding: 1.5rem 0;
+}
+
+.sidebar-menu li {
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar-menu a {
+  display: block;
+  padding: 0.75rem 1.5rem;
+  margin: 0 0.75rem;
+  color: #4a4a4a;
+  text-decoration: none;
+  font-weight: 400;
+  border-radius: 0.375rem;
+}
+
+.sidebar-menu a:hover {
+  background-color: #e8e8e8;
+  color: #2c2c2c;
+}
+
+.sidebar-menu a.active {
+  background-color: #e8e8e8;
+  color: #2c2c2c;
+  font-weight: 500;
+}
+
 /* Top-level wrapper to push the footer at the bottom of the viewport.
    This is useful when there is not enough content to push the footer
    down the page.
